--- a/sss.html
+++ b/sss.html
@@ -76,10 +76,10 @@
 
         <div class="py-4 border-b">
             <p class="text-2xl text-gray-100">
-                Neden ".com" yerine ".ga" ?
+                Neden ".com" yerine ".github.io" ?
             </p>
             <p class="text-gray-300 mt-2">
-                ".ga" ücretsiz. ".com" paralı :-)
+                ".github.io" ücretsiz. ".com" paralı :-)
             </p>
         </div>
 
