--- a/sss.html
+++ b/sss.html
@@ -79,7 +79,7 @@
 
         <div class="py-4 border-b">
             <p class="text-2xl text-gray-100">
-                Neden ".com" yerine ".github.io" ?
+                Neden ".com" yerine ".github.ioo" ?
             </p>
             <p class="text-gray-300 mt-2">
                 ".github.io" ücretsiz. ".com" paralı :-)
