--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <h1 class="text-4xl text-gray-100">9/A Sınıfı: 9'lardaki en yüksek IQ'lu şube.</h1>
             <p class="text-xl mt-8 text-gray-300">Evet, buraya ne koyacağım hakkında hiçbir fikrim yok.</p>
-            <p class="text-xl mt-8 text-gray-300">Sen iyisi mi sağ üstten ders programını kullan. : )</p>
+            <p class="text-xl mt-8 text-gray-300">Sen iyisi mi sağ üstten ders programını kullan : )</p>
 
         </div>
 
