--- a/sss.html
+++ b/sss.html
@@ -62,7 +62,7 @@
             </p>
             <p class="text-gray-300 mt-2">
                 Hayır, site şu an geliştirilme aşamasında. Sorunları giderdikten sonra tam sürümünü yayınlayacağım. Bu
-                süreçte önerilerinizi e-posta ile gönderebilirsiniz.
+                süreçte önerilerinizi e-posta ile gönderebilirsin.
             </p>
         </div>
 
@@ -71,9 +71,9 @@
                 Siteyi telefonumda-tabletimde kullanabiliyor muyum?
             </p>
             <p class="text-gray-300 mt-2">
-                Şimdilik, hayır. Bu sorunun farkındayım ama malum ben de bu siteyi ders çalışma aralarımda yazıyorum,
+                Evet ama bazı cihazları dik tutunca program tam olarak okunmuyor. Bu sorunun farkındayım ama malum ben de bu siteyi ders çalışma aralarımda yazıyorum,
                 çok zaman ayıramadığım
-                için de şimdilik mobilde kullanılmıyor. En kısa zamanda halletmeye çalışacağım.
+                için de şimdilik mobilde tam kullanılmıyor. En kısa zamanda halletmeye çalışacağım.
             </p>
         </div>
 
@@ -92,7 +92,10 @@
             </p>
             <p class="text-gray-300 mt-2">
                 Site ile ilgili tüm sorun, şikayet, öneri, fikirlerinizi <span
-                    class="italic underline">9asitesiyardim@gmail.com</span>'a iletebilirsiniz
+                    class="italic underline">9asitesiyardim@gmail.com</span>'a iletebilirsin
+            </p>
+            <p class="text-gray-300 mt-2">
+                (Özelden de yazabilirsin)
             </p>
         </div>
 
