--- a/program.html
+++ b/program.html
@@ -49,8 +49,8 @@
 
         </div>
         <!--navbar end-->
-        <p class=" sm:hidden text-4xl font-semibold text-white p-16">Şu an sitenin mobil cihazlara tam desteği yok. Lütfen pencereyi
-                büyütün ya da cihazınızı yan çevirmeyi deneyin.</p>
+        <p class=" sm:hidden text-4xl font-semibold text-white p-16">Şu an sitenin mobil cihazlara tam desteği yok. Lütfen bilgisayardaysan pencereyi
+                büyüt ya da mobil cihazını yan çevirmeyi dene.</p>
 
         <div class="container grid grid-cols-9  p-0 max-w-max lg:p-12 mx-auto invisible sm:visible">
                 <div
