--- a/sss.html
+++ b/sss.html
@@ -62,7 +62,7 @@
             </p>
             <p class="text-gray-300 mt-2">
                 Hayır, site şu an geliştirilme aşamasında. Sorunları giderdikten sonra tam sürümünü yayınlayacağım. Bu
-                süreçte önerilerinizi e-posta ile gönderebilirsin.
+                süreçte önerilerini e-posta ile gönderebilirsin.
             </p>
         </div>
 
@@ -91,7 +91,7 @@
                 Siteyle ilgili sorunlarım/fikirlerim var?
             </p>
             <p class="text-gray-300 mt-2">
-                Site ile ilgili tüm sorun, şikayet, öneri, fikirlerinizi <span
+                Site ile ilgili tüm sorun, şikayet, öneri, fikirlerini <span
                     class="italic underline">9asitesiyardim@gmail.com</span>'a iletebilirsin
             </p>
             <p class="text-gray-300 mt-2">
