--- a/sss.html
+++ b/sss.html
@@ -61,7 +61,7 @@
                 Bu sitenin son hali mi?
             </p>
             <p class="text-gray-300 mt-2">
-                Hayır, site şu an geliştirilme aşamasında. Sorunları giderdikten sonra tam sürümünü yayınlayacağım. Bu
+                Hayır, site şu an geliştirilme aşamasında. Sorunları gidermek için güncellemeler yayınlayacağım. Bu
                 süreçte önerilerini e-posta ile gönderebilirsin.
             </p>
         </div>
