--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           9/A Sınıfı
         </h1>
         <h1 class="text-2xl text-gray-100 text-center mt-5">
-          Dokuzlardaki en yüksek IQ'lu şube.
+          2024 Mezunları
         </h1>
       </section>
       <section>
