--- a/program.html
+++ b/program.html
@@ -9,7 +9,19 @@
         <link rel="stylesheet" href="custom.css">
         <title>9/A | Ders Programı</title>
 </head>
+<script language="JavaScript">
 
+        var password;
+        var pass1="hedef2024";
+        password=prompt('Şifreyi gir lütfen!');
+        if (password==pass1)
+          alert('Hoşgeldin ( ͡• ͜ʖ ͡• )');
+        else
+           {
+            window.location="http://9asitesi.github.io";
+            }
+        
+        </script>
 <body class="bg-gray-800">
 
 
