--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!--navbar end-->
 
     <div class="container mx-auto p-16">
-      <section style="height: 85vh;" >
+      <section id="hero" style="height: 85vh;" >
         <h1 class="text-7xl text-gray-100 text-center mt-12">
           9/A Sınıfı
         </h1>
@@ -59,7 +59,7 @@
           2024 Mezunları
         </h1>
       </section>
-      <section>
+      <section id="sınavlar">
         <h1 class="text-5xl text-gray-100 text-center">
           Sınav Tarihleri:
         </h1>
@@ -92,6 +92,12 @@
           <li>Almanca</li>
         </div>
       </section>
+      <section id="sıkıldım" class="text-center">
+        <h1 class="text-3xl mt-12 text-white text-center">Ders Çalışmaktan Sıkıldın Mı ?</h1>
+        <button class="bg-gray-900 text-white mt-6 text-2xl p-1 px-5 mx-auto rounded-lg hover:bg-gray-700  focus:outline-none focus:bg-gray-700" onclick="window.location.href='https://www.boredbutton.com/'">
+          Sıkıldım Butonu
+        </button>
+      </section> 
     </div>
   </body>
 </html>
