--- a/index.html
+++ b/index.html
@@ -98,6 +98,159 @@
           Sıkıldım Butonu
         </button>
       </section> 
+      <section id="sınıfListesi" class="mt-32">
+        <h1 class="text-center text-white text-5xl">Sınıf Listesi</h1>
+        <div class="text-white text-2xl mt-12 lg:px-72 md:px-36">
+          <table class="mx-auto lg:w-full  ">
+            <thead>
+              <tr class="text-left">
+                <th class="px-4 py-2 " >Numara</th>
+                <th class="px-4 py-2 " >Öğrenci</th>
+              </tr>
+            </thead>
+            <tbody class="text-xl font-normal">
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">8</td>
+                <td class="px-4 py-4">Eren Çinici</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">37</td>
+                <td class="px-4 py-4">Yiğitcan Tursun</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">51</td>
+                <td class="px-4 py-4">Kadir Samet Dağlı</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">52</td>
+                <td class="px-4 py-4">Şevval Sezer</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">57</td>
+                <td class="px-4 py-4">Duru Günal</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">63</td>
+                <td class="px-4 py-4">Kerem Güler</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">67</td>
+                <td class="px-4 py-4">Ömer Kara</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">84</td>
+                <td class="px-4 py-4">Zümra Ünsal</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">115</td>
+                <td class="px-4 py-4">Taha Güzel</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">129</td>
+                <td class="px-4 py-4">Onur azak</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">153</td>
+                <td class="px-4 py-4">Cemilhan Muhammet Elmas</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">158</td>
+                <td class="px-4 py-4">Çağrı Kavçak</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">173</td>
+                <td class="px-4 py-4">Fatma Işık</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">193</td>
+                <td class="px-4 py-4">Batuhan Uçar</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b-8 border-gray-200 py-10">
+                <td class="px-4 py-4">196</td>
+                <td class="px-4 py-4">Duru Çopur</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">197</td>
+                <td class="px-4 py-4">Aynur Devrik</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">203</td>
+                <td class="px-4 py-4">Muhammed Ulu</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">204</td>
+                <td class="px-4 py-4">Ayşe Sıla Özel</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">205</td>
+                <td class="px-4 py-4">Mustafa Tanıl Tozlu</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">206</td>
+                <td class="px-4 py-4">Damla Kişin</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">207</td>
+                <td class="px-4 py-4">Dilara Elif Ayaz</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">208</td>
+                <td class="px-4 py-4">Yusuf Coşkun</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">209</td>
+                <td class="px-4 py-4">Fatih Lale</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">210</td>
+                <td class="px-4 py-4">Yağmur Boydaş</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">211</td>
+                <td class="px-4 py-4">Hale Uzunkaş</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">212</td>
+                <td class="px-4 py-4">Eylül Akyol</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">213</td>
+                <td class="px-4 py-4">Hikmet Emre İnce</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">214</td>
+                <td class="px-4 py-4">Devrim Can</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">215</td>
+                <td class="px-4 py-4">Sude Naz Ertek</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">216</td>
+                <td class="px-4 py-4">Onat Çekmez</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">217</td>
+                <td class="px-4 py-4">Hüseyin Eren Bozkurt</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">218</td>
+                <td class="px-4 py-4">Elif İdil Şen</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">219</td>
+                <td class="px-4 py-4">Serra Nur Nişli</td>
+              </tr>
+              <tr class="hover:bg-gray-900 border-b border-gray-200 py-10">
+                <td class="px-4 py-4">220</td>
+                <td class="px-4 py-4">İdil Çavuş</td>
+              </tr>
+              
+            </tbody>
+          </table>
+        </div>
+
+      </section>
     </div>
   </body>
 </html>
