--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <title>9/A Sınıfı</title>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="5d7fda7f-9cb0-4d2f-878c-2eb1bd9787bd";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   </head>
   <body class="bg-gray-800">
     <div class="bg-gray-900 p-2 flex justify-between items-center">
@@ -250,6 +251,13 @@
           </table>
         </div>
 
+      </section>
+      <section id="faydalıLinkler" class="mt-32">
+        <h1 class="text-center text-white text-5xl">Faydalı Linkler</h1>
+        <div class="mt-12 px-12">
+          <button class="bg-gray-900 text-white mt-6 text-2xl p-4 px-6 mx-auto rounded-lg hover:bg-gray-700  focus:outline-none focus:bg-gray-700" onclick="window.location.href='https://giris.eba.gov.tr/EBA_GIRIS/student.jsp'">Eba</button>
+          
+        </div>
       </section>
     </div>
   </body>
