--- a/program.html
+++ b/program.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="custom.css" />
     <title>9/A | Ders Programı</title>
   </head>
-  <!--<script language="JavaScript">
+  <script language="JavaScript">
 
         var password;
         var pass1="hedef2024";
@@ -22,7 +22,7 @@
             window.location="http://9asitesi.github.io";
             }
         
-        </script>-->
+        </script>
   <body class="bg-gray-800">
     <div class="bg-gray-900 p-2 flex justify-between items-center">
       <!-- navbar -->
