--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           2024 Mezunları
         </h1>
       </section>
-      <section id="sınavlar">
+      <!--><section id="sınavlar">
         <h1 class="text-5xl text-gray-100 text-center">
           Sınav Tarihleri:
         </h1>
@@ -92,7 +92,7 @@
           <li>Tarih</li>
           <li>Almanca</li>
         </div>
-      </section>
+      </section>-->
       <section id="sıkıldım" class="text-center">
         <h1 class="text-3xl mt-12 text-white text-center">Ders Çalışmaktan Sıkıldın Mı ?</h1>
         <button class="bg-gray-900 text-white mt-6 text-2xl p-1 px-5 mx-auto rounded-lg hover:bg-gray-700  focus:outline-none focus:bg-gray-700" onclick="window.location.href='https://www.boredbutton.com/'">
