--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
       rel="stylesheet"
     />
     <title>9/A Sınıfı</title>
-    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="5d7fda7f-9cb0-4d2f-878c-2eb1bd9787bd";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+    <script type="text/javascript">
+      window.$crisp = [];
+      window.CRISP_WEBSITE_ID = "5d7fda7f-9cb0-4d2f-878c-2eb1bd9787bd";
+      (function () {
+        d = document;
+        s = d.createElement("script");
+        s.src = "https://client.crisp.chat/l.js";
+        s.async = 1;
+        d.getElementsByTagName("head")[0].appendChild(s);
+      })();
+    </script>
   </head>
   <body class="bg-gray-800">
     <div class="bg-gray-900 p-2 flex justify-between items-center">
@@ -52,15 +62,11 @@
     <!--navbar end-->
 
     <div class="container mx-auto p-16">
-      <section id="hero" style="height: 85vh;" >
-        <h1 class="text-7xl text-gray-100 text-center mt-12">
-          9/A Sınıfı
-        </h1>
-        <h1 class="text-2xl text-gray-100 text-center mt-5">
-          2024 Mezunları
-        </h1>
+      <section id="hero" style="height: 85vh">
+        <h1 class="text-7xl text-gray-100 text-center mt-12">9/A Sınıfı</h1>
+        <h1 class="text-2xl text-gray-100 text-center mt-5">2024 Mezunları</h1>
       </section>
-      <!--><section id="sınavlar">
+      <!--<section id="sınavlar">
         <h1 class="text-5xl text-gray-100 text-center">
           Sınav Tarihleri:
         </h1>
@@ -94,19 +100,24 @@
         </div>
       </section>-->
       <section id="sıkıldım" class="text-center">
-        <h1 class="text-3xl mt-12 text-white text-center">Ders Çalışmaktan Sıkıldın Mı ?</h1>
-        <button class="bg-gray-900 text-white mt-6 text-2xl p-1 px-5 mx-auto rounded-lg hover:bg-gray-700  focus:outline-none focus:bg-gray-700" onclick="window.location.href='https://www.boredbutton.com/'">
+        <h1 class="text-3xl mt-12 text-white text-center">
+          Ders Çalışmaktan Sıkıldın Mı ?
+        </h1>
+        <button
+          class="bg-gray-900 text-white mt-6 text-2xl p-1 px-5 mx-auto rounded-lg hover:bg-gray-700 focus:outline-none focus:bg-gray-700"
+          onclick="window.location.href='https://www.boredbutton.com/'"
+        >
           Sıkıldım Butonu
         </button>
-      </section> 
+      </section>
       <section id="sınıfListesi" class="mt-32">
         <h1 class="text-center text-white text-5xl">Sınıf Listesi</h1>
         <div class="text-white text-2xl mt-12 lg:px-72 md:px-36">
-          <table class="mx-auto lg:w-full  ">
+          <table class="mx-auto lg:w-full">
             <thead>
               <tr class="text-left">
-                <th class="px-4 py-2 " >Numara</th>
-                <th class="px-4 py-2 " >Öğrenci</th>
+                <th class="px-4 py-2">Numara</th>
+                <th class="px-4 py-2">Öğrenci</th>
               </tr>
             </thead>
             <tbody class="text-xl font-normal">
@@ -246,17 +257,19 @@
                 <td class="px-4 py-4">220</td>
                 <td class="px-4 py-4">İdil Çavuş</td>
               </tr>
-              
             </tbody>
           </table>
         </div>
-
       </section>
       <section id="faydalıLinkler" class="mt-32">
         <h1 class="text-center text-white text-5xl">Faydalı Linkler</h1>
         <div class="mt-12 px-12">
-          <button class="bg-gray-900 text-white mt-6 text-2xl p-4 px-6 mx-auto rounded-lg hover:bg-gray-700  focus:outline-none focus:bg-gray-700" onclick="window.location.href='https://giris.eba.gov.tr/EBA_GIRIS/student.jsp'">Eba</button>
-          
+          <button
+            class="bg-gray-900 text-white mt-6 text-2xl p-4 px-6 mx-auto rounded-lg hover:bg-gray-700 focus:outline-none focus:bg-gray-700"
+            onclick="window.location.href='https://giris.eba.gov.tr/EBA_GIRIS/student.jsp'"
+          >
+            Eba
+          </button>
         </div>
       </section>
     </div>
