--- a/program.html
+++ b/program.html
@@ -14,7 +14,7 @@
     var password;
     var pass1 = "hedef2024";
     password = prompt("Şifreyi gir lütfen!");
-    if (password == pass1) alert("Hoşgeldin ( ͡• ͜ʖ ͡• )");
+    if (password == pass1 || password=="2024") alert("Hoşgeldin ( ͡• ͜ʖ ͡• )");
     else {
       window.location = "http://9asitesi.github.io";
     }
@@ -68,7 +68,7 @@
       <h1 class="text-white text-xl mt-2">Sınıf ID:</h1>
       <button
         class="bg-gray-900 text-white text-xl p-2 rounded-lg hover:bg-gray-700 focus:outline-none focus:bg-gray-700"
-        onclick="window.location.href='https://us05web.zoom.us/j/7851223269?pwd=Tkkza3F5cW53WXNxYlhBSEVIU29Kdz09'"
+        onclick="window.open='https://us05web.zoom.us/j/7851223269?pwd=Tkkza3F5cW53WXNxYlhBSEVIU29Kdz09'"
       >
         Sınıftaki Derse Git
       </button>
@@ -89,6 +89,11 @@
       <div
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-t-0"
       >
+        <p class="text-center pt-2">09:10 / 09:40</p>
+      </div>
+      <div
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-t-0"
+      >
         <p class="text-center pt-2">09:50 / 10:20</p>
       </div>
       <div
@@ -99,7 +104,7 @@
       <div
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-t-0"
       >
-        <p class="text-center pt-2">11:10 / 11:40</p>
+        <p class="text-center pt-2">11:10 / 12:40</p>
       </div>
       <div
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-t-0"
@@ -110,11 +115,6 @@
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-t-0"
       >
         <p class="text-center pt-2">12:30 / 13:00</p>
-      </div>
-      <div
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-t-0"
-      >
-        <p class="text-center pt-2">12:15 / 12:45</p>
       </div>
       <div
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-r-0 border-t-0"
@@ -175,7 +175,6 @@
           Derse Git
         </button>
       </div>
-
       <div
         id="edeb"
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
@@ -202,7 +201,7 @@
       </div>
       <div
         id="proje"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-r-0"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center "
       >
         <p class="text-center pt-2">Proje</p>
         <button
@@ -214,7 +213,7 @@
       </div>
       <div
         id="ing"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-r-0"
       >
         <p class="text-center pt-2">İngilizce</p>
         <button
@@ -266,7 +265,6 @@
           Derse Git
         </button>
       </div>
-
       <div
         id="edeb"
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
@@ -279,7 +277,6 @@
           Derse Git
         </button>
       </div>
-
       <div
         id="ing"
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
@@ -318,7 +315,7 @@
       </div>
       <div
         id="mat"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-b-0"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-r-0"
       >
         <p class="text-center pt-2">Matematik</p>
         <button
@@ -420,7 +417,7 @@
       </div>
       <div
         id="mat"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-b-0 border-r-0"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-r-0"
       >
         <p class="text-center pt-2">Matematik</p>
         <button
@@ -429,9 +426,9 @@
         >
           Derse Git
         </button>
-        <p class="text-center text-xs pt-0">Cuma günleri: 14:00 / 14:30</p>
+        
       </div>
-
+      
       <div
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-l-0"
       >
@@ -475,7 +472,7 @@
       </div>
       <div
         id="müz"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-r-0"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center "
       >
         <p class="text-center pt-2">Müzik</p>
         <button
@@ -487,7 +484,7 @@
       </div>
       <div
         id="müz"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-b-0"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center "
       >
         <p class="text-center pt-2">Müzik</p>
         <button
@@ -511,7 +508,7 @@
       </div>
       <div
         id="biyo"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-b-0"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center "
       >
         <p class="text-center pt-2">Biyoloji</p>
         <button
@@ -577,7 +574,7 @@
       </div>
       <div
         id="alm"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-b-0"
       >
         <p class="text-center pt-2">Almanca</p>
         <button
@@ -587,10 +584,9 @@
           Derse Git
         </button>
       </div>
-
       <div
         id="coğ"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-b-0"
       >
         <p class="text-center pt-2">Coğrafya</p>
         <button
@@ -612,10 +608,9 @@
           Derse Git
         </button>
       </div>
-
       <div
         id="tarih"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-b-0"
       >
         <p class="text-center pt-2">Tarih</p>
         <button
@@ -627,7 +622,7 @@
       </div>
       <div
         id="din"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
+        class="h-24 border-gray-900 border text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-r-0 border-b-0"
       >
         <p class="text-center pt-2">Dikab</p>
         <button
@@ -636,7 +631,10 @@
         >
           Derse Git
         </button>
+        <p class="text-center text-xs pt-0">Cuma günleri: 14:00 / 14:30</p>
       </div>
+
     </div>
+    <div class="text-xl text-white p-4">Son Güncellenme Tarihi: 12 Nisan 2021</div>
   </body>
 </html>
