--- a/program.html
+++ b/program.html
@@ -14,7 +14,7 @@
     var password;
     var pass1 = "hedef2024";
     password = prompt("Şifreyi gir lütfen!");
-    if (password == pass1 || password=="2024") alert("Hoşgeldin ( ͡• ͜ʖ ͡• )");
+    if (password == pass1 || password == "2024") alert("Hoşgeldin ( ͡• ͜ʖ ͡• )");
     else {
       window.location = "http://9asitesi.github.io";
     }
@@ -104,7 +104,7 @@
       <div
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-t-0"
       >
-        <p class="text-center pt-2">11:10 / 12:40</p>
+        <p class="text-center pt-2">11:10 / 11:40</p>
       </div>
       <div
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-t-0"
@@ -201,7 +201,7 @@
       </div>
       <div
         id="proje"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center "
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
       >
         <p class="text-center pt-2">Proje</p>
         <button
@@ -426,9 +426,8 @@
         >
           Derse Git
         </button>
-        
       </div>
-      
+
       <div
         class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center border-l-0"
       >
@@ -472,7 +471,7 @@
       </div>
       <div
         id="müz"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center "
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
       >
         <p class="text-center pt-2">Müzik</p>
         <button
@@ -484,7 +483,7 @@
       </div>
       <div
         id="müz"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center "
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
       >
         <p class="text-center pt-2">Müzik</p>
         <button
@@ -508,7 +507,7 @@
       </div>
       <div
         id="biyo"
-        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center "
+        class="h-24 border border-gray-900 text-gray-100 text-sm md:text-lg xl:text-2xl break-words flex flex-col items-center"
       >
         <p class="text-center pt-2">Biyoloji</p>
         <button
@@ -633,8 +632,9 @@
         </button>
         <p class="text-center text-xs pt-0">Cuma günleri: 14:00 / 14:30</p>
       </div>
-
     </div>
-    <div class="text-xl text-white p-4">Son Güncellenme Tarihi: 12 Nisan 2021</div>
+    <div class="text-xl text-white p-4">
+      Son Güncellenme Tarihi: 12 Nisan 2021
+    </div>
   </body>
 </html>
