--- a/program.html
+++ b/program.html
@@ -11,13 +11,14 @@
     <title>9/A | Ders Programı</title>
   </head>
   <script language="JavaScript">
-    var password;
-    var pass1 = "hedef2024";
-    password = prompt("Şifreyi gir lütfen!");
-    if (password == pass1 || password == "2024") alert("Hoşgeldin ( ͡• ͜ʖ ͡• )");
-    else {
-      window.location = "http://9asitesi.github.io";
-    }
+    alert("Artık 10. sınıfa geçtik, neden hala burdasın ? :D");
+    // var password;
+    // var pass1 = "hedef2024";
+    // password = prompt("Şifreyi gir lütfen!");
+    // if (password == pass1 || password == "2024") alert("Hoşgeldin ( ͡• ͜ʖ ͡• )");
+    // else {
+    //   window.location = "http://9asitesi.github.io";
+    // }
   </script>
   <body class="bg-gray-800">
     <div class="bg-gray-900 p-2 flex justify-between items-center">
